# CGPT

./: README.md  main.py  pyproject.toml
method/: __init__.py  chunk_table.py  config.py  embedding_model.py  hard_negative_sampling.py  prompt.py  synthetic_question.py  train.sh  utils.py
