[project]
name = "cgpt"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.13.3",
    "flagembedding>=1.3.5",
    "loguru>=0.7.3",
    "numpy>=2.4.2",
    "requests>=2.32.5",
    "scikit-learn>=1.8.0",
    "torch>=2.10.0",
    "transformers>=4.41.0,<5.0.0",
]
